fixed spacing between sections and headers

--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@ body.dark {
 
 @media (max-width: 768px) {
   .unstyled li {
-    margin-bottom: 0.5rem;
+    margin-bottom: 2rem;
   }
 }
 
